<resources>
    <string name="app_name">Parstagram</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
