<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/tvPassword"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="80dp"
        android:text="@string/action_sign_up"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="431dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:text="@string/action_sign_in"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="431dp" />

    <EditText
        android:id="@+id/tvUsername"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="50dp"
        android:hint="@string/username_hint" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/nav_logo_whiteout" />
</RelativeLayout>